feat and style(section-four): HTML code and style.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,7 @@
   --color-primary: #a2a571;
   --color-second: #122b1d;
   --color-text: #324C4B;
+  --color-third: rgba(5, 143, 76, 0.731);
 
   --font: "Raleway", sans-serif;
 }
