--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,44 @@
 
 .section-six .row-2 .block .content .button-one{
     padding: 10px;
+    text-transform: uppercase;
 }
 
 /* End Section-six */
+
+/* Section-seven */
+.section-seven{
+    padding: 70px 0;
+    background-color: var(--color-third);
+}
+
+.section-seven .inner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.section-seven .item:not(:last-child) .inner-box::after{
+    content: "";
+    background-image: url(../imgs/circle-dec.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 100%;
+    width: 100%;
+    height: 32px;
+    top: 50%;
+}
+
+.section-seven .inner-box:hover h1,
+.section-seven .inner-box:hover span {
+    transition: all 0.5s ease;
+}
+
+.section-seven .inner-box:hover h1,
+.section-seven .inner-box:hover span {
+    transform: translateY(-10px);
+}
+
+/* End Section-seven */
