--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,3 +303,30 @@
 }
 
 /* End Section-nine */
+
+/* Footer */
+.footer{
+    padding: 30px 0;
+    background-color: var(--color-third);
+}
+
+.footer .list{
+    padding: 20px 0;
+    border-bottom: 1px solid rgba(127, 126, 126, 0.836);
+}
+
+.footer .list .social li a{
+    font-size: 20px;
+    color: var(--color-second);
+    padding: 10px;
+    border-radius: 50%;
+    background-color: white;
+    transition: all 0.5s ease;
+}
+
+.footer .list .social li a:hover{
+    background-color: var(--color-second);
+    color: white;
+}
+
+/* End Footer */
